--- a/Rule-Providers/DnlabChina.yaml
+++ b/Rule-Providers/DnlabChina.yaml
@@ -1,6 +1,8 @@
 payload:
     # 内容：dnlab国内网站
-    # 数量：3条
+    # 数量：5条
     - DOMAIN,www.dnlab.net
+    - DOMAIN,pve.dnlab.net
+    - DOMAIN-SUFFIX,home.dnlab.net
     - DOMAIN,login.partner.microsoftonline.cn
     - DOMAIN-SUFFIX,sharepoint.cn
