--- a/Config/All-All-ACL4SSR_Full.yaml
+++ b/Config/All-All-ACL4SSR_Full.yaml
@@ -29,39 +29,40 @@ proxy-providers:
   HK:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|港|HK|Hong Kong
+    filter: None|none|港|HK|Hong Kong
   JP:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan
+    filter: None|none|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan
   SG:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|新加坡|坡|狮城|SG|Singapore
+    filter: None|none|新加坡|坡|狮城|SG|Singapore
   TW:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|台|新北|彰化|TW|Taiwan
+    filter: None|none|台|新北|彰化|TW|Taiwan
   US:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States
+    filter: None|none|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United
+      States
   KR:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|KR|Korea|KOR|首尔|韩|韓
+    filter: None|none|KR|Korea|KOR|首尔|韩|韓
 
     # Streaming Media; 流媒体
   Netflix:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|NF|奈飞|解锁|Netflix|NETFLIX|Media
+    filter: None|none|NF|奈飞|解锁|Netflix|NETFLIX|Media
 
     # Scholar; 学术
   CERNET:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
-    filter: None|PKU|THU|SJTU|USTC
+    filter: None|none|PKU|THU|SJTU|USTC
 rule-providers:
   AbemaTV:
     type: http
