--- a/Config/rule-groups/DNLAB_Full.yaml
+++ b/Config/rule-groups/DNLAB_Full.yaml
@@ -22,6 +22,11 @@ proxy-groups:
           - All
       url: http://www.gstatic.com/generate_204
       interval: 300
+    - name: 负载均衡
+      type: load-balance
+      use:
+          - All
+
     # 内容分类, 规则集映射到此
     - name: 学术网站
       type: select
@@ -253,6 +258,7 @@ rules:
     - RULE-SET,Scholar,学术网站
     # 其他
     - RULE-SET,DnlabChina,DIRECT
+    - RULE-SET,RequestLimit,负载均衡
     - RULE-SET,Adobe,节点选择
     - RULE-SET,Google,节点选择
     - RULE-SET,GoogleCN,DIRECT
