--- a/Config/rule-groups/ACL4SSR_Full.yaml
+++ b/Config/rule-groups/ACL4SSR_Full.yaml
@@ -22,6 +22,11 @@ proxy-groups:
           - All
       url: http://www.gstatic.com/generate_204
       interval: 300
+    - name: 负载均衡
+      type: load-balance
+      use:
+          - All
+
     # 内容分类, 规则集映射到此
     - name: 学术网站
       type: select
