--- a/Config/rule-providers/DNLAB.yaml
+++ b/Config/rule-providers/DNLAB.yaml
@@ -13,3 +13,9 @@ rule-providers:
         url: "https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/DnlabChina.yaml"
         path: ./rule-providers/DNLAB/DnlabChina.yaml
         interval: 86400
+    RequestLimit:
+        type: http
+        behavior: classical
+        url: "https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/RequestLimit.yaml"
+        path: ./rule-providers/DNLAB/RequestLimit.yaml
+        interval: 86400
