add home broadband

--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -383,6 +383,12 @@ rule-providers:
     url: https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/DnlabChina.yaml
     path: ./rule-providers/DNLAB/DnlabChina.yaml
     interval: 86400
+  HomeBroadband:
+    type: http
+    behavior: classical
+    url: https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/HomeBroadband.yaml
+    path: ./rule-providers/DNLAB/HomeBroadband.yaml
+    interval: 86400
   RequestLimit:
     type: http
     behavior: classical
@@ -648,6 +654,7 @@ rules:
 - RULE-SET,Scholar,学术网站
     # 其他
 - RULE-SET,DnlabChina,DIRECT
+- RULE-SET,HomeBoardband,解锁节点
 - RULE-SET,RequestLimit,负载均衡
 - RULE-SET,Adobe,节点选择
 - RULE-SET,Google,节点选择
