--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -654,7 +654,7 @@ rules:
 - RULE-SET,Scholar,学术网站
     # 其他
 - RULE-SET,DnlabChina,DIRECT
-- RULE-SET,HomeBoardband,解锁节点
+- RULE-SET,HomeBroadband,解锁节点
 - RULE-SET,RequestLimit,负载均衡
 - RULE-SET,Adobe,节点选择
 - RULE-SET,Google,节点选择
