--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -15,7 +15,7 @@ proxy-providers-template: &proxy-providers-template
   health-check:
     enable: true
     interval: 600
-    lazy: true
+    lazy: false
     url: http://www.gstatic.com/generate_204
 
 proxy-providers:
