--- a/Config/proxy-providers/All.yaml
+++ b/Config/proxy-providers/All.yaml
@@ -8,7 +8,7 @@ proxy-providers-template: &proxy-providers-template
     health-check:
         enable: true
         interval: 600
-        lazy: true
+        lazy: false
         url: http://www.gstatic.com/generate_204
 
 proxy-providers:
