change subconverter domain

--- a/Rule-Providers/SitesOnlyInSchool.yaml
+++ b/Rule-Providers/SitesOnlyInSchool.yaml
@@ -4,4 +4,4 @@ payload:
     - DOMAIN-SUFFIX,tcep.pku.edu.cn
     - DOMAIN-SUFFIX,byr.pt
     - DOMAIN,pku.dnlab.net
-    - DOMAIN,changelog.archive.blog
+    - DOMAIN,changelog.kawaii.id
