perf: 学术节点暂时改成url-test

--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -639,7 +639,8 @@ proxy-groups:
   use:
   - Netflix
 - name: 学术节点
-  type: select
+      # 能用的多起来之后再改成select
+  type: url-test
   use:
   - CERNET
 
