代理new bing (www.bing.com)

--- a/Config/All-All-ACL4SSR_Full.yaml
+++ b/Config/All-All-ACL4SSR_Full.yaml
@@ -383,6 +383,12 @@ rule-providers:
     url: https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/DnlabChina.yaml
     path: ./rule-providers/DNLAB/DnlabChina.yaml
     interval: 3600
+  DnlabAbroad:
+    type: http
+    behavior: classical
+    url: https://raw.lovely.ink/darknightlab/ClashRule/main/Rule-Providers/DnlabAbroad.yaml
+    path: ./rule-providers/DNLAB/DnlabAbroad.yaml
+    interval: 3600
   HomeBroadband:
     type: http
     behavior: classical
