--- a/Rule-Providers/DnlabAbroad.yaml
+++ b/Rule-Providers/DnlabAbroad.yaml
@@ -1,4 +1,5 @@
 payload:
     # 内容：dnlab维护的国外网站/需要挂代理才能正常使用的网站列表
-    # 数量：1条
+    # 数量：2条
     - DOMAIN,www.bing.com
+    - DOMAIN-SUFFIX,qbittorrent.org
