--- a/Rule-Providers/DnlabAbroad.yaml
+++ b/Rule-Providers/DnlabAbroad.yaml
@@ -1,5 +1,6 @@
 payload:
     # 内容：dnlab维护的国外网站/需要挂代理才能正常使用的网站列表
-    # 数量：2条
+    # 数量：3条
     - DOMAIN,www.bing.com
     - DOMAIN-SUFFIX,qbittorrent.org
+    - DOMAIN,tracker.kawaii.id
