--- a/Rule-Providers/DnlabAbroad.yaml
+++ b/Rule-Providers/DnlabAbroad.yaml
@@ -2,5 +2,7 @@ payload:
     # 内容：dnlab维护的国外网站/需要挂代理才能正常使用的网站列表
     # 数量：3条
     - DOMAIN,www.bing.com
+    - DOMAIN,sydney.bing.com
+    - DOMAIN,www.bingapis.com
     - DOMAIN-SUFFIX,qbittorrent.org
     - DOMAIN,tracker.kawaii.id
