--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -630,28 +630,29 @@ proxy-groups:
   - 手动切换
 
   # 国家与地区分类, proxy-providers映射到此, 采用url-test, 这个分类上大概自动选择比较好
+  # 2023.10.08 我现在觉得select比较好
 - name: 香港节点
-  type: url-test
+  type: select
   use:
   - HK
 - name: 日本节点
-  type: url-test
+  type: select
   use:
   - JP
 - name: 新加坡节点
-  type: url-test
+  type: select
   use:
   - SG
 - name: 台湾节点
-  type: url-test
+  type: select
   use:
   - TW
 - name: 美国节点
-  type: url-test
+  type: select
   use:
   - US
 - name: 韩国节点
-  type: url-test
+  type: select
   use:
   - KR
 - name: 大陆节点
