--- a/Config/client/client.yaml
+++ b/Config/client/client.yaml
@@ -6,16 +6,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 ipv6: true
-
-# DNS server settings
-# This section is optional. When not present, the DNS server will be disabled.
 dns:
   enable: true
   listen: 0.0.0.0:53
   ipv6: true # when the false, response to AAAA questions will be empty
-
-  # These nameservers are used to resolve the DNS nameserver hostnames below.
-  # Specify IP addresses only
   default-nameserver:
     - 1.1.1.1
     - 1.0.0.1
@@ -24,57 +18,22 @@ dns:
   # enhanced-mode: fake-ip
   # fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
   use-hosts: true # lookup hosts and return IP record
-
-  # search-domains: [local] # search domains for A/AAAA record
-
-  # Hostnames in this list will not be resolved with fake IPs
-  # i.e. questions to these domain names will always be answered with their
-  # real IP addresses
-  # fake-ip-filter:
-  #   - '*.lan'
-  #   - localhost.ptlogin2.qq.com
-
-  # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
-  # All DNS questions are sent directly to the nameserver, without proxies
-  # involved. Clash answers the DNS question with the first result gathered.
   nameserver:
-    - https://api.dnlab.net/9FE8749B-0E86-582D-E33F-08204D58F81B
-    # - https://1.1.1.1/dns-query # DNS over HTTPS
+    # - https://api.dnlab.net/9FE8749B-0E86-582D-E33F-08204D58F81B
+    - https://1.1.1.1/dns-query # DNS over HTTPS
     # - https://1.0.0.1/dns-query # DNS over HTTPS
     # - https://8.8.8.8/dns-query # DNS over HTTPS
     # - https://8.8.4.4/dns-query # DNS over HTTPS
-    # - '8.8.8.8#en0'
-
-  # When `fallback` is present, the DNS server will send concurrent requests
-  # to the servers in this section along with servers in `nameservers`.
-  # The answers from fallback servers are used when the GEOIP country
-  # is not `CN`.
   fallback:
     - https://1.1.1.1/dns-query # DNS over HTTPS
     - https://1.0.0.1/dns-query # DNS over HTTPS
     - https://8.8.8.8/dns-query # DNS over HTTPS
     - https://8.8.4.4/dns-query # DNS over HTTPS
-
-  # If IP addresses resolved with servers in `nameservers` are in the specified
-  # subnets below, they are considered invalid and results from `fallback`
-  # servers are used instead.
-  #
-  # IP address resolved with servers in `nameserver` is used when
-  # `fallback-filter.geoip` is true and when GEOIP of the IP address is `CN`.
-  #
-  # If `fallback-filter.geoip` is false, results from `nameserver` nameservers
-  # are always used if not match `fallback-filter.ipcidr`.
-  #
-  # This is a countermeasure against DNS pollution attacks.
   fallback-filter:
     geoip: false
     # geoip-code: CN
     # ipcidr:
-    #   - 240.0.0.0/4
+    #   - 0.0.0.0/0
+    #   - ::/0
     domain:
       - "*"
-
-  # Lookup domains via specific nameservers
-  # nameserver-policy:
-  #   'www.baidu.com': '114.114.114.114'
-  #   '+.internal.crop.com': '10.0.0.1'
