--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -19,10 +19,11 @@ dns:
   # fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
   use-hosts: true # lookup hosts and return IP record
   nameserver:
+  - https://dns.tuna.tsinghua.edu.cn:8443/dns-query
     # - https://api.dnlab.net/9FE8749B-0E86-582D-E33F-08204D58F81B
     # - https://1.1.1.1/dns-query # DNS over HTTPS
     # - https://1.0.0.1/dns-query # DNS over HTTPS
-  - https://8.8.8.8/dns-query   # DNS over HTTPS # maybe 8.8.8.8 will tend to return the IP of the nearest server, 1.1.1.1 may not
+    # - https://8.8.8.8/dns-query # DNS over HTTPS
     # - https://8.8.4.4/dns-query # DNS over HTTPS
   fallback: # fallback dns use proxy according to https://github.com/Dreamacro/clash/issues/681
   - https://1.1.1.1/dns-query   # DNS over HTTPS
@@ -30,13 +31,13 @@ dns:
   - https://8.8.8.8/dns-query   # DNS over HTTPS
   - https://8.8.4.4/dns-query   # DNS over HTTPS
   fallback-filter:
-    geoip: false
+    geoip: true
     geoip-code: CN
     # ipcidr:
     #   - 0.0.0.0/0
     #   - ::/0
-    domain:
-    - '*.*'   # All domain will use fallback, this filter may be wrong. check https://github.com/Dreamacro/clash/blob/master/component/trie/domain.go for more information
+    # domain:
+    #   - "*.*" # All domain will use fallback, this filter may be wrong. check https://github.com/Dreamacro/clash/blob/master/component/trie/domain.go for more information
 proxy-providers-template: &proxy-providers-template
   type: http
     # your proxy provider url
