--- a/Rule-Providers/SitesOnlyInSchool.yaml
+++ b/Rule-Providers/SitesOnlyInSchool.yaml
@@ -4,6 +4,6 @@ payload:
     - DOMAIN-SUFFIX,tcep.pku.edu.cn
     - DOMAIN-SUFFIX,byr.pt
     - DOMAIN-SUFFIX,pku.dnlab.net
-    - DOMAIN,changelog.kawaii.id
+    - DOMAIN,changelog.projectk.org
     - DOMAIN,opg.optica.org
     - DOMAIN,optics.ansys.com
