--- a/Config/All-All-DNLAB_Full.yaml
+++ b/Config/All-All-DNLAB_Full.yaml
@@ -4,7 +4,8 @@ port: 7892
 allow-lan: true
 mode: Rule
 log-level: info
-external-controller: :9090
+external-controller: 0.0.0.0:9090
+unified-delay: true
 ipv6: true
 dns:
   enable: true
@@ -67,7 +68,7 @@ proxy-providers:
     <<: *proxy-providers-template
     path: ./proxy-providers/All.yaml
         # go的正则表达式，去掉含CN的节点，包含其他所有节点
-    filter: None|none
+    exclude-filter: CN
 
     # Countries or Regions; 国家或地区
   HK:
@@ -470,7 +471,7 @@ proxy-groups:
 - name: 自动选择
   type: url-test
   use:
-  - All
+  - AutoSelect     # 不用All因为All包含CN节点
   url: http://www.gstatic.com/generate_204
   interval: 300
 - name: 负载均衡
