--- a/Config/client/client.yaml
+++ b/Config/client/client.yaml
@@ -7,40 +7,29 @@ log-level: info
 external-controller: 0.0.0.0:9090
 unified-delay: true
 ipv6: true
+# global-client-fingerprint: chrome
 dns:
   enable: true
   listen: 0.0.0.0:53
   ipv6: true # when the false, response to AAAA questions will be empty
   default-nameserver:
-    - 1.1.1.1
-    # - 1.0.0.1
-    - 8.8.8.8
-    # - 8.8.4.4
-    - "[2602:f9df:111::1111]:53"
+    - system
     - 114.114.114.114
-  # enhanced-mode: fake-ip
-  # fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
+  enhanced-mode: redir-host
   use-hosts: true # lookup hosts and return IP record
   nameserver:
-    # - https://1.1.1.1/dns-query # DNS over HTTPS
-    # - https://1.0.0.1/dns-query # DNS over HTTPS
-    # - https://8.8.8.8/dns-query # DNS over HTTPS
-    # - https://8.8.4.4/dns-query # DNS over HTTPS
     - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
     - https://dns.projectk.org/dns-query
-    # - https://dns.tuna.tsinghua.edu.cn:8443/dns-query
-  fallback: # fallback dns use proxy according to https://github.com/Dreamacro/clash/issues/681
-    - https://1.1.1.1/dns-query # DNS over HTTPS
-    - https://1.0.0.1/dns-query # DNS over HTTPS
-    - https://8.8.8.8/dns-query # DNS over HTTPS
-    - https://8.8.4.4/dns-query # DNS over HTTPS
-    - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
-    - https://dns.projectk.org/dns-query
-  fallback-filter:
-    geoip: true
-    geoip-code: CN
-    # ipcidr:
-    #   - 0.0.0.0/0
-    #   - ::/0
-    # domain:
-    #   - "*.*" # All domain will use fallback, this filter may be wrong. check https://github.com/Dreamacro/clash/blob/master/component/trie/domain.go for more information
+    - "1.1.1.1#RULES"
+  nameserver-policy:
+    "geosite:private":
+      - system
+    "geosite:cn":
+      - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
+geo-auto-update: true
+geo-update-interval: 24
+geox-url:
+  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
+  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
+  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
