--- a/Config/client/client.yaml
+++ b/Config/client/client.yaml
@@ -18,13 +18,14 @@ dns:
   enhanced-mode: redir-host
   use-hosts: true # lookup hosts and return IP record
   nameserver:
-    - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
-    - https://dohcn.projectk.org/dns-query
     - https://dns.projectk.org/dns-query
     - https://1.1.1.1/dns-query#RULES
   nameserver-policy:
     "geosite:private":
       - system
+    "rule-set:DnlabChina,GoogleCN,SteamCN,ChinaDomain":
+      - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
+      - https://dohcn.projectk.org/dns-query
     "geosite:cn":
       - https://tools.dnlab.net:16443/9c880947-bae6-4daa-beea-63f68a8df261/dns-query
       - https://dohcn.projectk.org/dns-query
@@ -35,3 +36,15 @@ geox-url:
   geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
   mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
   asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
+
+sniffer:
+  enable: true
+  force-dns-mapping: true
+  parse-pure-ip: true
+  sniff:
+    QUIC:
+      ports: [443]
+    TLS:
+      ports: [443, 16443]
+    HTTP:
+      ports: [80, 8080, 16080]
