--- a/Config/All-All-DNLAB_ReturnChina.yaml
+++ b/Config/All-All-DNLAB_ReturnChina.yaml
@@ -48,6 +48,8 @@ sniffer:
       ports: [443, 16443]
     HTTP:
       ports: [80, 8080, 16080]
+  skip-domain:
+  - Mijia Cloud
 proxy-providers-template: &proxy-providers-template
   type: http
     # your proxy provider url
